# pico2-rp-projects

buzzer-beep/: Cargo.toml
buzzer-beep/src/: main.rs
external-led/: Cargo.toml
external-led/src/: main.rs
hello-oled/: Cargo.toml
hello-oled/src/: main.rs
lcd/custom-chars/: Cargo.toml
lcd/custom-chars/src/: main.rs
lcd/hello-lcd/: Cargo.toml
lcd/hello-lcd/src/: main.rs
lcd/multi-glyph/src/: main.rs
led-dimming/: Cargo.toml
led-dimming/.cargo/: config.toml
led-dimming/src/: main.rs
oled/hello-oled/src/: main.rs
rfid/change-key/src/: main.rs
rfid/memory-dump/src/: main.rs
rfid/print-uid/src/: main.rs
rfid/read-blocks/: Cargo.toml
rfid/read-blocks/src/: main.rs
rfid/rfid-dump/: Cargo.toml
rfid/rfid-led/: Cargo.toml
rfid/rfid-led/src/: main.rs
rfid/rfid-read/: Cargo.toml
rfid/rfid-read/src/: main.rs
rfid/rfid-uid/: Cargo.toml
rfid/rfid-write/src/: main.rs
rfid/usb-serial-led/: Cargo.toml
rfid/write-data/: Cargo.toml
servo-motor/: Cargo.toml
servo-motor/src/: main.rs
ultrasonic/: Cargo.toml
ultrasonic/src/: main.rs
usb-serial-led/: Embed.toml
usb-serial-led/.cargo/: config.toml
usb-serial-led/src/: main.rs
