[package]
name = "rfid-uid"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"

embedded-hal = "1.0.0"
rp235x-hal = { git = "https://github.com/rp-rs/rp-hal", version = "0.2.0", features = [
  "binary-info",
  "critical-section-impl",
  "rt",
  "defmt",
] }
panic-halt = "0.2.0"
rp-binary-info = "0.1.0"
usbd-serial = "0.2.2"
usb-device = "0.3.2"
mfrc522 = "0.8.0"
embedded-hal-bus = "0.2.0"
heapless = "0.8.0"
