[package]
name = "usb-serial-led"
version = "0.2.0"
edition = "2024"

[dependencies]
# Cortex-M 
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

# Panic Handler
panic-probe = { version = "1.0.0" }

embedded-hal = "1.0.0"
rp235x-hal = { version = "0.3.0", features = [
  "binary-info",
  "critical-section-impl",
  "rt",

] }
rp-binary-info = "0.1.1"

usbd-serial = "0.2.2"
usb-device = "0.3.2"
